hope this fixes button text overflowing and breaking

--- a/_sass/forms.scss
+++ b/_sass/forms.scss
@@ -19,7 +19,9 @@
 	background: $secondary-brand-color;/*rgba(255,255,255,0.15);*/
 	border-radius: 3px;
 	border: 1px solid rgba(255, 255, 255, 0.3);
-	padding: 16px 50px;
+	/*padding: 16px 50px;*/
+    /* top right bottom left */
+    padding: 16px 50px 16px 50px;
 }
 
 .button.alt a:hover {
